# Adorax

./: .gitignore  Makefile.in  bootstrap  configure.ac
data/boot/: limine.conf
sys/: Makefile
sys/arch/amd64/: Makefile  adorax.sys
sys/arch/amd64/conf/: link.ld
sys/arch/amd64/cpu/: early.S
sys/include/arch/amd64/: mb.h
sys/include/sys/: types.h
sys/kern/: Makefile  kern_init.c
